2010-07-21	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Always save the inode to database (needed for DB_CHECKINODE)
	* Documented ftype and e2fsattrs in aide.conf
	* Added TFTYPE token
	* Prompt for ./configure and make only if autoreconf was successful

2010-07-20	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Added ext2 file attributes support

2010-06-12	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Always add permissions attribute to database
	* Added AIDEVERSION to report

2010-06-11	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Adjusted old database warning message

2010-06-10	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Added file type change detection support
	* Use DB_ATTR_TYPE for ignorelist and forced_attrs

2010-06-09	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Fixed handling of size and growing size bits

2010-06-08	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Another fix for the changed permissions are always reported issue

2010-06-07	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Replaced 'Permissions' by 'Perm' to fit 9 columns
	* Fit detailed output in 80 columns, closes feature request 1337759

2010-06-05	Richard van den Berg  <richard@vdberg.org>
	* Released version 0.14.2
	* Changed version to post-0.14.2

2010-06-05	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Added missing description for '|' in aide.conf man page
	* Report correct file type in "Detailed information about changes" section
	* Fixed strcpy issue on multi-core environments

2010-06-04	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Replaced 'File' by 'Entry' in database warnings
	* Reformatted "Entry ... has different attributes" warnings

2010-06-03	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Added missing space and new line to "Error in selective regexp" message,
	  fixes bug 1944700
	* Added missing '-' to separator line in the report

2010-05-30	Richard van den Berg  <richard@vdberg.org>
	* Released version 0.14.1
	* Changed version to post-0.14.1
